Update requirements and refactor agent to use Nebius embeddings and LLMs

--- a/a2a_customer_routing/requirements.txt
+++ b/a2a_customer_routing/requirements.txt
@@ -1,12 +1,12 @@
-a2a-sdk==0.2.3
-google-adk==1.2.1
-google-genai==1.19.0
-httpx==0.28.1
-litellm==1.72.2
-llama-index-core==0.12.40
-llama-index-embeddings-litellm==0.3.0
-llama-index-llms-litellm==0.5.1
+a2a-sdk
+google-adk
+google-genai
+httpx
+litellm
+llama-index-core
 nest-asyncio
-python-dotenv==1.0.1
+python-dotenv
 requests
-uvicorn==0.34.2
+uvicorn
+llama-index-llms-nebius 
+llama-index-embeddings-nebius
